# leetcode_cli

./: .eslintignore  .eslintrc.json  .gitignore  .leetkick.json  AGENTS.md  Cargo.toml  README.md  biome.json  package-lock.json  package.json  prettier.config.js  tsconfig.json
clean-test/final-python/: .leetkick.json
design_docs/: leetcode-cli-mvp.md
leetkick-test/test-workspace/: .leetkick.json
src/: index.ts  main.rs
src/commands/: add.ts  add_language.rs  fetch.rs  fetch.ts  fix.ts  init.rs  init.ts  mod.rs  sync.ts  test.ts
src/graphql/: graphql.rs  mod.rs  queries.rs
src/tools/: add_leading_zeros.rs  copy_template_file.rs  file.rs  fill_build_template.rs  fill_exercise_template.rs  fill_test_template.rs  get_case_by_language.rs  get_code_snippet_by_lang.rs  get_file_extension.rs  get_project_path.rs  is_leetcode_cli_project.rs  languages.rs  mod.rs  read_template.rs  sanitize_text.rs
src/types/: leetcode.ts
src/utils/: file-operations.ts  leetcode-api.ts  templates.ts  workspace.ts
templates/: .prettierrc.json  BUILD  README.md  README_template.md  WORKSPACE
templates/cpp/: BUILD  README.md  exercise_template.cpp  test_template.cpp
templates/go/: README.md  exercise_template.go  test_template.go
templates/java/: README.md  build.gradle.kts  exercise_template.java  settings.gradle.kts  (+1 more)
test/: cli-integration.test.ts  duplicate-handling.test.ts  file-operations.test.ts  leetcode-api.test.ts  templates.test.ts  test-command.test.ts
test-rust-workspace/: .leetkick.json
test-workspace/: .leetkick.json
typescript/: .gitignore  package.json
(+75 files in other folders)
