[package]
name = "leetcode_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
convert_case = "0.6.0"
html-escape = "0.2.13"
lazy_static = "1.5.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = "0.26.3"
strum_macros = "0.26.4"
textwrap = "0.16.1"
tokio = { version = "1.38.0", features = ["full"] }
